Fix double scroll bar

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -652,3 +652,7 @@ body {
 
 .portfolio-figcaption a:hover {
   color: black; }
+
+.blog-frame {
+  width: 100%;
+  height: 100%; }
